2016-09-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Test/D04parameter.ztst: Add tests for ${(q)} being
	aware of the EQUALS option.

2016-09-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39236 (plus typo fix): Doc/Zsh/compsys.yo, README: docs: Tweak
	_arguments $opt_args documentation added in 39173.

2016-09-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 39222: Test/V01zmodload.ztst: test use of module loaded math
	functions with zsh/systeme.

2016-09-07  Danek Duvall  <duvall@comfychair.org>

	* 39194: Completion/Unix/Command/_man: _man (Solaris): Ignore
	man-index. Support multiple sections in the -s flag's argument.

2016-09-07  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Command/_rm: fix to use ;|
	style fall-throughs in the case statement

	* 39209: Matthew Martin: Completion/BSD/Command/_chflags:
	Update options

	* 39208: Matthew Martin: Completion/BSD/Command/_chflags:
	Update flags

	* 39223: Matthew Martin: Completion/BSD/Command/_chflags:
	Introduce addflags function to reduce redundancy

	* 39193: Completion/Unix/Type/_remote_files: don't pass options
	from after -- on to compadd

2016-09-07  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 39185: Src/lex.c: wordbeg only set for ZLE if not alias.
	Fixes crash on completion in some obscure alias expansions.

2016-09-07  Peter Stephenson  <p.stephenson@samsung.com>

	* Matthew Martin: 39221: Completion/Unix/Command/_rm: update for
	BSD.

	* 39218: Src/module.c: fix feature enables with math functions
	present.  This caused parameters to be miscounted.

	* 39217: Src/Modules/system.mdd: adapt zsh.mdd to avoid problems
	with GCC preprocessor in error names.

2016-09-06  Barton E. Schaefer  <schaefer@zsh.org>

	* m0viefreak: 38153 (cf. 39135): Completion/Base/Utility/_arguments:
	change the way long options are examined for "=" signs to more
	accurately identify options that take arguments

2016-09-06  Daniel Shahaf  <d.s@daniel.shahaf.name>
