@@ -1,3 +1,10 @@
+2016-09-11  Daniel Shahaf  <d.s@daniel.shahaf.name>
+
+	* 39252: Src/Zle/compcore.c, Src/Zle/compctl.c,
+	Src/Zle/computil.c, Src/Zle/zle_misc.c, Src/Zle/zle_tricky.c,
+	Src/builtin.c, Src/subst.c, Src/text.c, Src/utils.c: internal:
+	quotestring: Drop the 'e' parameter, which no caller uses.
+
 2016-09-09  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* unposted: Test/D04parameter.ztst: Add tests for ${(q)} being
